--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next-intl": "^4.8.2",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "recharts": "^3.7.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
